--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
         //var countDownDate = new Date("February 01, 2021 00:00:00").getTime();
         // setInterval: Cập nhật đếm ngược sau mỗi 1 giây.
         // 1000: 1 giây
+        //sau khi cập nhật trên git
         var x = setInterval(function () {
     
             // Ngày và giờ hôm nay
