2024 add new year

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="newyearletter.css">
-    <link rel="icon" href="icons8_tiger_50px.png">
+    <link rel="icon" href="./5169269.png">
     <title>Countdown Web</title>
     <style>
         :root {
@@ -68,7 +68,7 @@
             margin: 0 auto;
             margin-top: 20px;
             background-color: rgb(53, 89, 248);
-            background-image: url("https://1.bp.blogspot.com/-ckJYEbfLJYs/YN_QiXmEGbI/AAAAAAABQQw/S3U4yYhFSyI3lhP4ZVSQr8WX3tS1sA7aQCLcBGAsYHQ/w1600/Happy%2BNew%2BYear%2B2022%2BFull%2BHD%2BWallpaper.jpg");
+            background-image: url("https://as1.ftcdn.net/v2/jpg/01/81/62/32/1000_F_181623200_ZHDCw2Q8mkC7MpJeaHhk8rjjBRgHCB3b.jpg");
             background-repeat: no-repeat;
             background-size: cover;
             
@@ -153,7 +153,7 @@
     <script>
         // Đặt ngày đếm ngược, ở đây mình đặt ngày đếm ngược là 01/02/2022
         //February: Tháng hai, 01: Ngày, 2022: Năm, 00:00:00 or 24:00:00 thời gian của ngày đếm ngược
-        var countDownDate = new Date("February 01, 2022 00:00:00").getTime();
+        var countDownDate = new Date("February 01, 2024 00:00:00").getTime();
         //var countDownDate = new Date("February 01, 2021 00:00:00").getTime();
         // setInterval: Cập nhật đếm ngược sau mỗi 1 giây.
         // 1000: 1 giây
